--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "statsdq-gdq",
   "version": "0.0.0",
+  "engines": {
+    "node": "0.10.x"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "^0.5.0",
